Fri May 18 21:10:33 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcps.mpc:

          List the *TypeSupportImpl.cpp files as needed for the 'idl_stubs'
          target.  This is used by the script that measures static footprint.

Fri May 18 17:38:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/dds_generator.h:
        * dds/idl/marshal_generator.cpp:

          Leave out the name of the parameter for gen_is_bounded_size().
          This removes the necessity for ACE_UNUSED_ARG, which may be seen as
          a read of unitialized data by Coverity.

Fri May 18 15:50:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemReceiveStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compiler and coverity warnings.

Thu May 17 16:02:14 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/LargeSample.mpc:
        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/subscriber.cpp:
        * tests/DCPS/Messenger/Messenger.mpc:
        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:
        * tests/DCPS/SharedTransport/SharedTransport.mpc:
        * tests/DCPS/SharedTransport/TestCase.cpp:
        * tests/transport/simple/DDS_transport_simple.mpc:
        * tests/transport/simple/pub_main.cpp:
        * tests/transport/simple/sub_main.cpp:

          Allow tests that used shared memory to link to static lib.

Thu May 17 15:41:01 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compile errors on WinCE.

Thu May 17 15:13:56 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemDataLink.h:

          Allow for non-Win32 platforms that are ACE_LACKS_SYSV_SHMEM
          and ACE_HAS_POSIX_SEM (VxWorks).
